--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,4 @@
-body a {
-    text-decoration: none;
-    color: black;
-}
-body li {
-    list-style: none;
-}
-/*--------------------polices----------------*/
+/*---------------body et polices----------------*/
 h1,
 .colonne h3 {
     font-family: 'Shrikhand', cursive;
@@ -13,10 +6,17 @@ h1,
 body {
     font-family: 'Roboto', sans-serif;
 }
+body a {
+    text-decoration: none;
+}
+body li {
+    list-style: none;
+}
+/*--------------------en tete----------------------*/
 header .logo {
     margin-left: 40%;
 }
-/*----------------localisation---------------*/
+/*-------------------localisation--------------------*/
 .formulaire/*zonedetexte*/ {
     width: 100%;
     height: 2em;
@@ -31,10 +31,10 @@ header .logo {
 ::placeholder {
     padding-left: 1em;
 }
-/*----------------menu------------------*/
+
+/*--------------------menu-----------------------*/
 .explorer li/*bouton explorer*/ {
     border-radius: 45px;
-    color: white;
     font-size: 1.3em;
     margin-top: 2em;
     margin-left: 2em;
@@ -46,6 +46,13 @@ header .logo {
 .explorer li:hover {
     box-shadow: 0 0 20px #9356DC;
 }
+.explorer h1, p {
+    text-align: center;
+}
+.explorer a {
+    color: white;
+}
+/*---------filtres de fonctionnement------*/
 .filtres li/*----filtres----*/ {
     background-color: #F6F6F6;
     margin-left: 1em;
@@ -57,12 +64,15 @@ header .logo {
     background-color: pink;
     box-shadow: 0 0 20px pink;
 }
+.filtres a {
+    color: black;
+}
 .numero {
     color: white;
     display: inline;
     margin-left: -10px;
     margin-right: 2em;
-    padding: 0.5em;
+    padding: 0.4em;
     border-radius: 50%;
     background-color: #9356DC;
 }
@@ -72,7 +82,7 @@ header .logo {
     margin-right: 1em;
     font-size: 1.2em;
 }
-/*--------------restaurants---------------*/
+/*-------------restaurants------------*/
 aside {
     background-color: #F6F6F6;
 }
@@ -80,17 +90,14 @@ aside h2 {
     padding-top: 1.5em;
     margin-left: 1em;
 }
+.vignettesrestaurants {
+    display: flex;
+}
 .vignettesrestaurants img {
     width: 100%;
     height: 12em;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
-}  
-.vignettesrestaurants a {
-    display: inline-block;
-}
-.vignettesrestaurants i {
-    padding-left: 7em;
 }
 .vignettesrestaurants h3 {
     margin-top: 5px;
@@ -100,37 +107,31 @@ aside h2 {
 .vignettesrestaurants p {
     margin-left: 1em;
 }
+.fa-heart {
+    margin-left: 30%;
+}
 .lapalettedugout,
 .lanoteenchantee,
 .alafrançaise,
 .ledelicedessens {
-    display: inline-block;
     border-radius: 20px;
     box-shadow: 0 0 20px #0000002e;
     background-color: white;
     margin-left: 1.2em;
     margin-bottom: 1em;
-    width: 20%;
-    height: auto;
+    width: 30%;
 }
-.nouveauresto {
-    display: inline-block;
-    position: relative;
-}
-.nouveauresto h4 {
+.nouveauté p /*icone nouveau*/ {
     background-color: #99E2D0;
     color: #008766;
-    z-index: 1;
+    padding: 0.5em 0.5em 0.5em 0.5em;
     position: absolute;
-    top: 0;
-    left: 70%;
-    padding: 0.5em 1em 0.5em 1em;
-
+    z-index: 1;
 }
 .i:hover {
     background: linear-gradient(#FF79DA, #9356DC);
 }
-/*--------------------pied de page ------------*/
+/*-----------------------pied de page -----------------*/
 .colonne {
     background-color: #353535;
     width: 100%;
@@ -147,7 +148,6 @@ aside h2 {
 .fa-utensils,
 .fa-hands-helping {
     color: white;
-    
     margin-right: 1em;
 }
 .lienfooter a {
@@ -156,12 +156,11 @@ aside h2 {
 .lienfooter li {
     margin: 1em;
 }
-/*-------------------------------------------------------------*/
-/*---------------------responsive mobile-----------------------*/
-/*------------------------------------------------------------*/
+/*-----------------------------------------------------*/
+/*------------responsive mobile-----------------------*/
+/*-------------------------------------------------*/
 
-@media screen and (max-width: 480px) {
-    /*-----------En tete de page----------*/
+@media screen and (max-width: 899px) {
     header .logo {
         max-width: 50%;
         margin-left: 30%;
@@ -182,7 +181,6 @@ aside h2 {
         padding-top: 0.5em;
         margin-left: 1em;
     }
-    /*--------localisation--------*/
     .fa-map-marker-alt/*icone localisation*/ {
         position: absolute;
         margin-left: 35%;
@@ -190,8 +188,6 @@ aside h2 {
     ::placeholder {
         padding-left: 40%;
     }
-    
-    /*------------Explorer--------*/
     .explorer {
         background-color: #F6F6F6;
         padding-top: 1px;
@@ -209,99 +205,16 @@ aside h2 {
     .explorer a {
         color: white;
     }
-    
-    /*-------fonctionnement--------*/
     article h2 {
         margin-top: 2em;
-    }
-    
-    
-    /*-------restaurants----------*/
-    aside {
-        background-color: #F6F6F6;
-    }
-    aside h2 {
-        padding-top: 1.5em;
-        margin-left: 1em;
-    }
-    .vignettesrestaurants img {
-        width: 100%;
-        height: 12em;
-        object-fit: cover;
-        border-radius: 20px 20px 0 0;
-    }  
-    .vignettesrestaurants a {
-        display: inline-block;
-    }
-    .vignettesrestaurants i {
-        padding-left: 7em;
-    }
-    .vignettesrestaurants h3 {
-        margin-top: 5px;
-        margin-bottom: -10px;
-        margin-left: 1em;
-    }
-    .vignettesrestaurants p {
-        margin-left: 1em;
     }
     .lapalettedugout,
     .lanoteenchantee,
     .alafrançaise,
     .ledelicedessens {
-        border-radius: 20px;
-        box-shadow: 0 0 20px #0000002e;
-        background-color: white;
-        margin-left: 1.2em;
-        margin-bottom: 1em;
         width: 90%;
     }
-    .nouveauresto {
-        display: inline-block;
-        position: relative;
-    }
-    .nouveauresto h4 {
-        background-color: #99E2D0;
-        color: #008766;
-        z-index: 1;
-        position: absolute;
-        top: 0;
-        left: 70%;
-        padding: 0.5em 1em 0.5em 1em;
-
-    }
-    .i:hover {
-        background: linear-gradient(#FF79DA, #9356DC);
-    }
-    /*---------pied de page -------*/
-    .colonne {
-        background-color: #353535;
-        width: 100%;
-        height: 14em;
-        margin-top: 0;
-        padding-top: 1em;
-    }
-    .colonne h3 {
-        color: white;
-        margin-left: 1em;
-        font-size: 1.5em;
-    }
-    
-    .fa-utensils,
-    .fa-hands-helping {
-        color: red;
-        
-        margin-right: 1em;
-    }
-    .lienfooter a {
-        color: white;
-    }
-    .lienfooter li {
-        margin: 1em;
-    }
-/*-------------------------------------------*/
 /*-------carte des menus des restaurants------*/
-/*--------------------------------------------*/
-
     img/*photo du resto*/ {
         width: 100%;
     }
@@ -348,6 +261,7 @@ aside h2 {
         text-align: center;
     }
 }
+
 
 
 
