--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
 }
 body a {
     text-decoration: none;
+    color: black;
 }
 body li {
     list-style: none;
@@ -32,7 +33,7 @@ header .logo {
     padding-left: 1em;
 }
 
-/*--------------------menu-----------------------*/
+/*--------------------explorer-----------------------*/
 .explorer li/*bouton explorer*/ {
     border-radius: 45px;
     font-size: 1.3em;
@@ -105,10 +106,13 @@ aside h2 {
     margin-left: 1em;
 }
 .vignettesrestaurants p {
+    text-align: initial;
     margin-left: 1em;
 }
-.fa-heart {
-    margin-left: 30%;
+.vignettesrestaurants .fa-heart {
+    padding-right: 5em;
+    margin-left: 13em;
+    margin-right: 0.5em;
 }
 .lapalettedugout,
 .lanoteenchantee,
@@ -119,17 +123,18 @@ aside h2 {
     background-color: white;
     margin-left: 1.2em;
     margin-bottom: 1em;
-    width: 30%;
+    width: 23%;
 }
 .nouveauté p /*icone nouveau*/ {
     background-color: #99E2D0;
     color: #008766;
     padding: 0.5em 0.5em 0.5em 0.5em;
+    margin-left: 15%;
     position: absolute;
     z-index: 1;
 }
 .i:hover {
-    background: linear-gradient(#FF79DA, #9356DC);
+    background-color: linear-gradient(#FF79DA, #9356DC);
 }
 /*-----------------------pied de page -----------------*/
 .colonne {
@@ -155,6 +160,70 @@ aside h2 {
 }
 .lienfooter li {
     margin: 1em;
+}
+/*-------carte des menus des restaurants------*/
+.fa-arrow-left {
+    font-size: 3em;
+    margin-left: 1em;
+}
+.contenaireentete .logo {
+    margin-left: 20%;
+    width: 50%;
+    height: auto;
+}
+section img/*photo du resto*/ {
+    width: 60%;
+    border-radius: 30% 30% 0 0;
+    margin-left: 20%;
+}
+.carterestaurant {
+    width: 100%;
+    background-color: #F6F6F6;
+    border-radius: 55px 55px 0 0;
+    padding-left: 0.7em;
+    padding-bottom: 5em;
+    padding-top: 1em;
+}
+.carterestaurant h1 {
+    text-align: center;
+    font-size: 2.5em;
+}
+.carterestaurant h2 {
+    border-bottom: 3px solid #99E2D0;
+    width: 2em;
+}
+.carterestaurant .fa-heart /*logo coeur*/ {
+    margin-left: 7em;
+}
+.plat {
+    width:95%;
+    background-color: white; 
+    border-radius: 15px;
+    box-shadow: 0 0 20px #0000002e;
+    padding-left: 0.5em;
+}
+.plat h3 {
+    padding-top: 0.5em; 
+}
+.plat h4 {
+    margin-top: -0.7em;
+    padding-bottom: 0.7em;
+}
+.commander li {
+    border-radius: 45px;
+    margin-top: 2em;
+    margin-left: 4em;
+    margin-right: 4em;
+    padding: 0.8em;
+    background: linear-gradient(#FF79DA, #9356DC);
+    text-align: center;
+}
+.commander a {
+    color: white;
+    font-size: 1.5em;
+}
+.commander li:hover {
+    box-shadow: 0 0 20px #9356DC;
 }
 /*-----------------------------------------------------*/
 /*------------responsive mobile-----------------------*/
@@ -214,9 +283,23 @@ aside h2 {
     .ledelicedessens {
         width: 90%;
     }
+    .vignettesrestaurants {
+        display: flex;
+        flex-direction: column;
+    }
+    .nouveauté p /*icone nouveau*/ {
+        background-color: #99E2D0;
+        color: #008766;
+        padding: 0.5em 0.5em 0.5em 0.5em;
+        margin-left: 55%;
+        position: absolute;
+        z-index: 1;
+    }
 /*-------carte des menus des restaurants------*/
-    img/*photo du resto*/ {
+    section img/*photo du resto*/ {
         width: 100%;
+        margin-left: 0;
+        border-radius: 0;
     }
     .carterestaurant {
         width: 100%;
@@ -228,12 +311,16 @@ aside h2 {
         padding-bottom: 5em;
         padding-top: 1em;
     }
+    .carterestaurant h1 {
+        text-align: initial;
+        font-size: 2em;
+    }
     .carterestaurant h2 {
         border-bottom: 3px solid #99E2D0;
         width: 2em;
     }
-    .fa-heart /*logo coeur*/ {
-        margin-left: 7em;
+    .carterestaurant .fa-heart /*logo coeur*/ {
+        margin-left: 1em;
     }
     .plat {
         width:95%;
