--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,9 @@ body li {
 h1, .colonne h3 {
     font-family: 'shrikhand' , cursive;
 }
-/*---------page d'acceuil---------------*/
+
+/*---------page principal---------------*/
+
 header .logo {
     margin-left: 20%;
     width: 40em;
@@ -74,7 +76,6 @@ article h2 {
 .filtres a {
     color: black;
     margin-left: 5em;
-    font-weight: bold;
 }
 .numero {
     color: white;
@@ -104,6 +105,7 @@ article h2 {
 .vignette-restaurant {
     width: 90%;
     margin-left: 3em;
+    position: relative;
     background-color: white;
     border-radius: 30px;
     box-shadow: 0 0 20px #0000002E;
@@ -114,7 +116,7 @@ article h2 {
     padding: 0.5em;
     position: absolute;
     font-size: 3em;
-    margin-left: 55%;
+    margin-left: 65%;
 }
 .vignette-restaurant h3 {
     margin-top: 0.5em;
@@ -123,27 +125,23 @@ article h2 {
 }
 .vignette-restaurant h4 {
     margin-left: 2em;
-    padding-bottom: 3em;
+    margin-top: -1em;
+    padding-bottom: 2em;
+    color: black;
+    font-weight: normal;
+}
+.icone-vide {
+    position: absolute;
+    font-size: 4em;
+    left: 85%;
+    bottom: 6%;
     color: black;
 }
-.coeur-vide  {
-    opacity: 1;
+.icone-plein:hover {
     position: absolute;
-    right: 15%; 
-    font-size: 5em;
-    color: black;
-}
-.coeur-vide:hover {
-    opacity: 0;
-}
-.coeur-plein {
-    opacity: 0;
-    position: absolute;
-    right: 15%;
-    font-size: 5em;
-}
-.coeur-plein:hover {
-    opacity: 1;
+    font-size: 4em;
+    left: 85%;
+    bottom: 6%;
     background: linear-gradient(to bottom, #9356DC, #FF79DA);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -170,7 +168,9 @@ article h2 {
     color: white;
     padding-right: 3em;
 }
-/*-----carte restaurant------*/
+
+/*------------carte restaurant----------*/
+
 .fa-arrow-left {
     position: absolute;
     left: 1px; top: 1em;
@@ -193,11 +193,11 @@ section img {
     padding: 1em 0 5em 0.7em;
 }
 .carte-restaurant h1 {
-    font-size: 5em;
+    font-size: 4em;
     margin-left: 0.5em;
 }
 .carte-restaurant .fa-heart {
-    margin-left: 2em;
+    margin-left: 20%;
 }
 .carte-restaurant h2 {
     font-size: 3em;
@@ -210,10 +210,14 @@ section img {
     border-radius: 35px;
     box-shadow: 0 0 20px #0000002e;
     padding-left: 2em;
+    transition-property: background-color;
+    transition-duration: 0.5s;
+}
+.plat:hover {
+    background-color: #99E2D0;
 }
 .plat h3 {
     padding-top: 0.5em;
-    font-weight: bolder;
     font-size: 2em;
 }
 .plat h4 {
