--- a/css/style.css
+++ b/css/style.css
@@ -1,248 +1,250 @@
 body {
-    font-family: 'roboto' , sans-serif;
+  font-family: 'roboto' , sans-serif;
 }
 body a {
-    text-decoration: none;
+  text-decoration: none;
 }
 body li {
-    list-style: none;
+  list-style: none;
 }
-h1, .colonne h3 {
-    font-family: 'shrikhand' , cursive;
+h1, .pied-de-page h3 {
+  font-family: 'shrikhand' , cursive;
 }
-
-/*---------page principal---------------*/
-
+/*---------page accueil---------------*/
 header .logo {
-    margin-left: 20%;
-    width: 40em;
+  margin-left: 20%;
+  width: 40em;
 }
 .formulaire {
-    width: 100%;
-    height: 5em;
-    background-color: #EAEAEA;
-    border: 1px solid #EAEAEA;
-    border-top: 2px solid grey;
-    margin-top: 2em;
+  width: 100%;
+  height: 5em;
+  background-color: #EAEAEA;
+  border: 1px solid #EAEAEA;
+  border-top: 2px solid grey;
+  margin-top: 2em;
 }
 .fa-map-marker-alt {
-    position: absolute;
-    top: 7em;
-    left: 30%;
-    font-size: 1.5em;
+  position: absolute;
+  top: 7em;
+  left: 30%;
+  font-size: 1.5em;
 }
-::placeholder {
-    text-align: center;
-    font-size: 2.5em;
+section {
+  background-color: #F6F6F6;
+  padding-bottom: 2em;
 }
 .explorer h1 {
-    text-align: center;
-    font-size: 4em;
-    margin: 8% 10% 4% 10%;
-} 
+  text-align: center;
+  font-size: 4em;
+  margin: 8% 10% 4% 10%;
+}
 .explorer p {
-    text-align: center;
+  text-align: center;
 }
-.explorer li {
-    border-radius: 85px;
-    margin: 5em 10em;
-    padding: 2em;
-    background: linear-gradient(#FF79DA, #9356DC);
-    text-align: center;
+.bouton {
+  border-radius: 85px;
+  margin: 5em 10em;
+  padding: 2em;
+  background: linear-gradient(#FF79DA, #9356DC);
+  text-align: center;
 }
-.explorer a {
-    color: white;
+.bouton:hover {
+  opacity: 0.9;
+  box-shadow: 0 0 20px #9356DC;
+}
+.bouton a {
+  color: white;
+  font-weight: bold;
 }
 article h2 {
-    margin-left: 2em;
+  margin-left: 2em;
+  margin-top: 4em;
 }
 .filtres li {
-    background-color: #F6F6F6;
-    margin: 3em;
-    border-radius: 30px;
-    padding: 2em 0 2em 0;
-    box-shadow: 0 0 20px #0000002E;
+  background-color: #F6F6F6;
+  margin: 1em 3em 0em 3em;
+  border-radius: 30px;
+  padding: 3.5em 0;
+  box-shadow: 0 0 20px #0000002E;
+  font-weight: bold;
+  font-size: 0.9em;
 }
-.filtres li:active {
-    background-color: pink;
-    box-shadow: 0 0 20px pink;
+
+.filtres li:hover {
+  background: #D8BFD8;
+  -webkit-transition: background 0.6s;
+  transition: background 0.6s;
+  box-shadow: 0 0 20px #D8BFD8;
 }
 .filtres i {
-    color: grey;
-}
-.filtres i:hover {
-    color: #9356DC;
+  color: grey;
+  margin-right: 4em;
 }
 .filtres a {
-    color: black;
-    margin-left: 5em;
+  color: black;
+  margin-left: 5em;
 }
 .numero {
-    color: white;
-    display: inline;
-    margin-left: -25px;
-    margin-right: 2em;
-    padding: 1em;
-    font-size: 13px;
-    border-radius: 50%;
-    background-color: #9356DC;
+  color: white;
+  display: inline;
+  margin-left: -20px;
+  margin-right: 5em;
+  padding: 1.5em;
+  font-size: 13px;
+  border-radius: 50%;
+  background-color: #9356DC;
 }
 #restaurants {
-    background-color: #F2F2F2;
-    padding-bottom: 7em;
+  background-color: #F2F2F2;
+  margin-top: 8em;
+  padding-bottom: 7em;
 }
 #restaurants h2 {
-    padding-top: 5em;
-    margin-left: 2em;
-    margin-bottom: 3em;
+  padding-top: 3em;
+  margin-left: 2em;
+  margin-bottom: 3em;
 }
 .restaurants img {
-    width: 100%;
-    height: 30em;
-    object-fit: cover;
-    border-radius: 30px 30px 0 0;
+  width: 100%;
+  height: 30em;
+  object-fit: cover;
+  border-radius: 30px 30px 0 0;
 }
 .vignette-restaurant {
-    width: 90%;
-    margin-left: 3em;
-    position: relative;
-    background-color: white;
-    border-radius: 30px;
-    box-shadow: 0 0 20px #0000002E;
+  width: 90%;
+  margin-left: 3em;
+  position: relative;
+  background-color: white;
+  border-radius: 30px;
+  box-shadow: 0 0 20px #0000002E;
 }
 .nouveaute p {
-    background-color: #99E2D0;
-    color: #008766;
-    padding: 0.5em;
-    position: absolute;
-    font-size: 3em;
-    margin-left: 65%;
+  background-color: #99E2D0;
+  color: #008766;
+  padding: 0.5em;
+  position: absolute;
+  font-size: 3em;
+  margin-left: 65%;
 }
 .vignette-restaurant h3 {
-    margin-top: 0.5em;
-    margin-left: 2em;
-    color: black;
+  margin-top: 0.5em;
+  margin-left: 2em;
+  color: black;
 }
 .vignette-restaurant h4 {
-    margin-left: 2em;
-    margin-top: -1em;
-    padding-bottom: 2em;
-    color: black;
-    font-weight: normal;
+  margin-left: 2em;
+  margin-top: -1em;
+  padding-bottom: 2em;
+  color: black;
+  font-weight: normal;
 }
 .icone-vide {
-    position: absolute;
-    font-size: 4em;
-    left: 85%;
-    bottom: 6%;
-    color: black;
+  position: absolute;
+  font-size: 4em;
+  left: 85%;
+  bottom: 6%;
+  color: black;
 }
 .icone-plein {
-    opacity: 0;
-    position: absolute;
-    font-size: 4em;
-    left: 85%;
-    bottom: 6%;
+  opacity: 0;
+  position: absolute;
+  font-size: 4em;
+  left: 85%;
+  bottom: 6%;
 }
-.icone-plein:active {
-    opacity: 1;
-    position: absolute;
-    font-size: 4em;
-    left: 85%;
-    bottom: 6%;
-    background: linear-gradient(to bottom, #9356DC, #FF79DA);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+.icone-plein:hover {
+  opacity: 1;
+  position: absolute;
+  font-size: 4em;
+  left: 85%;
+  bottom: 6%;
+  background: linear-gradient(to bottom, #9356DC, #FF79DA);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
-.colonne {
-    background-color: #353535;
-    padding-bottom: 7em;
+.pied-de-page {
+  background-color: #353535;
+  padding-bottom: 7em;
 }
-.colonne h3 {
-    color: white;
-    margin-left: 3em;
-    padding-top: 2em;
-    font-size: 2em;
-    font-weight: normal;
-} 
-.colonne a { 
-    color: white;
+.pied-de-page h3 {
+  color: white;
+  margin-left: 3em;
+  padding-top: 2em;
+  font-size: 2em;
+  font-weight: normal;
 }
-.colonne li {
-    margin-left: 3em;
-    margin-bottom: 1em;
+.pied-de-page a {
+  color: white;
 }
-.colonne i {
-    color: white;
-    padding-right: 3em;
+.pied-de-page li {
+  margin-left: 3em;
+  margin-bottom: 1em;
 }
-
-/*------------carte restaurant----------*/
-
+.pied-de-page i {
+  color: white;
+  padding-right: 3em;
+}
+/*------------menu restaurant----------*/
 .fa-arrow-left {
-    position: absolute;
-    left: 1px; top: 1em;
-    font-size: 3em;
-    margin-left: 1em;
+  position: absolute;
+  left: 1px;
+  top: 1em;
+  font-size: 3em;
+  margin-left: 1em;
+  color: black;
 }
 .contenaire-en-tete .logo {
-    margin-left: 20%;
-    margin-top: 2em;
-    width: 50%;
-    padding-bottom: 2em;
+  margin-left: 20%;
+  margin-top: 2em;
+  width: 50%;
+  padding-bottom: 2em;
 }
 section img {
-    width: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 0;
 }
 .carte-restaurant {
-    width: 100%;
-    position: relative;
-    background-color: #F6F6F6;
-    border-radius: 10em 10em 0 0;
-    padding: 1em 0 5em 0.7em;
+  position: relative;
+  z-index: 1;
+  top: 30em;
+  margin-bottom: 30em;
+  width: 100%;
+  background-color: #F6F6F6;
+  border-radius: 10em 10em 0 0;
+  padding: 1em 0 4em 0.7em;
 }
 .carte-restaurant h1 {
-    font-size: 4em;
-    margin-left: 0.5em;
+  font-size: 4em;
+  margin-left: 0.5em;
 }
 .carte-restaurant .fa-heart {
-    margin-left: 20%;
+  margin-left: 20%;
 }
 .carte-restaurant h2 {
-    font-size: 3em;
-    border-bottom: 3px solid #99E2D0;
-    width: 10%;
-    margin-top: 2em;
-} 
+  font-size: 3em;
+  border-bottom: 3px solid #99E2D0;
+  width: 10%;
+  margin-top: 2em;
+}
 .plat {
-    width: 95%;
-    background-color: white;
-    border-radius: 35px;
-    box-shadow: 0 0 20px #0000002e;
-    padding-left: 2em;
-    padding-bottom: 1em;
-    transition-property: background-color;
-    transition-duration: 0.5s;
+  width: 95%;
+  background-color: white;
+  border-radius: 35px;
+  box-shadow: 0 0 20px #0000002e;
+  padding-left: 2em;
+  padding-bottom: 1em;
 }
 .plat h3 {
-    font-size: 2em;
-    padding-top: 0.5em;
+  font-size: 2em;
+  padding-top: 0.5em;
 }
 .plat h4 {
-    margin-top: -1em;
-    font-size: 0.9em;
+  margin-top: -1em;
+  font-size: 0.9em;
 }
 .tarif {
-    font-size: 3em;
-    position: absolute;
-    right: 1em;
-}
-.commander li {
-    border-radius: 45px;
-    padding-top: 2em;
-    padding-bottom: 2em;
-    margin: 8em 10em 9em 10em;
-    background: linear-gradient(#FF79DA, #9356DC);
-    text-align: center;
-    color: white;
+  font-size: 3em;
+  position: absolute;
+  right: 1em;
 }
