--- a/css/style.css
+++ b/css/style.css
@@ -1,89 +1,164 @@
+.bouton {
+  border-radius: 85px;
+  margin: 5em 10em;
+  padding: 2em;
+  background: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9356DC));
+  background: linear-gradient(#FF79DA, #9356DC);
+  text-align: center;
+}
+
+.bouton a {
+  color: white;
+  font-weight: bold;
+}
+
 body {
   font-family: 'roboto' , sans-serif;
 }
+
 body a {
   text-decoration: none;
 }
+
 body li {
   list-style: none;
 }
+
 h1, .pied-de-page h3 {
   font-family: 'shrikhand' , cursive;
 }
-/*---------page accueil---------------*/
+
+.bouton:hover {
+  opacity: 0.9;
+  -webkit-box-shadow: 0 0 20px #9356DC;
+          box-shadow: 0 0 20px #9356DC;
+}
+
+.fonctionnement li:hover {
+  background: #D8BFD8;
+  -webkit-transition: background 0.6s;
+  transition: background 0.6s;
+  -webkit-box-shadow: 0 0 20px #D8BFD8;
+          box-shadow: 0 0 20px #D8BFD8;
+}
+
+.icone-plein:hover {
+  opacity: 1;
+  position: absolute;
+  font-size: 4em;
+  left: 85%;
+  bottom: 6%;
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  background: linear-gradient(to bottom, #9356DC, #FF79DA);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 header .logo {
   margin-left: 20%;
   width: 40em;
 }
+
+.fa-arrow-left {
+  position: absolute;
+  left: 1px;
+  top: 1em;
+  font-size: 3em;
+  margin-left: 1em;
+  color: black;
+}
+
+.contenaire-en-tete .logo {
+  margin-left: 20%;
+  margin-top: 2em;
+  width: 50%;
+  padding-bottom: 2em;
+}
+
 .formulaire {
   width: 100%;
-  height: 5em;
+  height: 7em;
   background-color: #EAEAEA;
   border: 1px solid #EAEAEA;
   border-top: 2px solid grey;
-  margin-top: 2em;
 }
+
 .fa-map-marker-alt {
   position: absolute;
-  top: 7em;
+  top: 6em;
   left: 30%;
   font-size: 1.5em;
 }
+
+::-webkit-input-placeholder {
+  text-align: center;
+  font-size: 3em;
+  padding-top: 1em;
+  font-weight: bold;
+}
+
+:-ms-input-placeholder {
+  text-align: center;
+  font-size: 3em;
+  padding-top: 1em;
+  font-weight: bold;
+}
+
+::-ms-input-placeholder {
+  text-align: center;
+  font-size: 3em;
+  padding-top: 1em;
+  font-weight: bold;
+}
+
+::placeholder {
+  text-align: center;
+  font-size: 3em;
+  padding-top: 1em;
+  font-weight: bold;
+}
+
 section {
   background-color: #F6F6F6;
   padding-bottom: 2em;
 }
+
 .explorer h1 {
   text-align: center;
   font-size: 4em;
   margin: 8% 10% 4% 10%;
 }
+
 .explorer p {
   text-align: center;
 }
-.bouton {
-  border-radius: 85px;
-  margin: 5em 10em;
-  padding: 2em;
-  background: linear-gradient(#FF79DA, #9356DC);
-  text-align: center;
-}
-.bouton:hover {
-  opacity: 0.9;
-  box-shadow: 0 0 20px #9356DC;
-}
-.bouton a {
-  color: white;
-  font-weight: bold;
-}
+
 article h2 {
   margin-left: 2em;
   margin-top: 4em;
 }
-.filtres li {
+
+.fonctionnement li {
   background-color: #F6F6F6;
   margin: 1em 3em 0em 3em;
   border-radius: 30px;
   padding: 3.5em 0;
-  box-shadow: 0 0 20px #0000002E;
+  -webkit-box-shadow: 0 0 20px #0000002E;
+          box-shadow: 0 0 20px #0000002E;
   font-weight: bold;
   font-size: 0.9em;
 }
 
-.filtres li:hover {
-  background: #D8BFD8;
-  -webkit-transition: background 0.6s;
-  transition: background 0.6s;
-  box-shadow: 0 0 20px #D8BFD8;
-}
-.filtres i {
+.fonctionnement i {
   color: grey;
   margin-right: 4em;
 }
-.filtres a {
+
+.fonctionnement a {
   color: black;
   margin-left: 5em;
 }
+
 .numero {
   color: white;
   display: inline;
@@ -94,30 +169,37 @@ article h2 {
   border-radius: 50%;
   background-color: #9356DC;
 }
+
 #restaurants {
   background-color: #F2F2F2;
   margin-top: 8em;
   padding-bottom: 7em;
 }
+
 #restaurants h2 {
   padding-top: 3em;
   margin-left: 2em;
   margin-bottom: 3em;
 }
+
 .restaurants img {
   width: 100%;
   height: 30em;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 30px 30px 0 0;
 }
+
 .vignette-restaurant {
   width: 90%;
   margin-left: 3em;
   position: relative;
   background-color: white;
   border-radius: 30px;
-  box-shadow: 0 0 20px #0000002E;
+  -webkit-box-shadow: 0 0 20px #0000002E;
+          box-shadow: 0 0 20px #0000002E;
 }
+
 .nouveaute p {
   background-color: #99E2D0;
   color: #008766;
@@ -126,11 +208,13 @@ article h2 {
   font-size: 3em;
   margin-left: 65%;
 }
+
 .vignette-restaurant h3 {
   margin-top: 0.5em;
   margin-left: 2em;
   color: black;
 }
+
 .vignette-restaurant h4 {
   margin-left: 2em;
   margin-top: -1em;
@@ -138,6 +222,7 @@ article h2 {
   color: black;
   font-weight: normal;
 }
+
 .icone-vide {
   position: absolute;
   font-size: 4em;
@@ -145,6 +230,7 @@ article h2 {
   bottom: 6%;
   color: black;
 }
+
 .icone-plein {
   opacity: 0;
   position: absolute;
@@ -152,58 +238,13 @@ article h2 {
   left: 85%;
   bottom: 6%;
 }
-.icone-plein:hover {
-  opacity: 1;
-  position: absolute;
-  font-size: 4em;
-  left: 85%;
-  bottom: 6%;
-  background: linear-gradient(to bottom, #9356DC, #FF79DA);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.pied-de-page {
-  background-color: #353535;
-  padding-bottom: 7em;
-}
-.pied-de-page h3 {
-  color: white;
-  margin-left: 3em;
-  padding-top: 2em;
-  font-size: 2em;
-  font-weight: normal;
-}
-.pied-de-page a {
-  color: white;
-}
-.pied-de-page li {
-  margin-left: 3em;
-  margin-bottom: 1em;
-}
-.pied-de-page i {
-  color: white;
-  padding-right: 3em;
-}
-/*------------menu restaurant----------*/
-.fa-arrow-left {
-  position: absolute;
-  left: 1px;
-  top: 1em;
-  font-size: 3em;
-  margin-left: 1em;
-  color: black;
-}
-.contenaire-en-tete .logo {
-  margin-left: 20%;
-  margin-top: 2em;
-  width: 50%;
-  padding-bottom: 2em;
-}
+
 section img {
   width: 100%;
   position: absolute;
   z-index: 0;
 }
+
 .carte-restaurant {
   position: relative;
   z-index: 1;
@@ -214,37 +255,73 @@ section img {
   border-radius: 10em 10em 0 0;
   padding: 1em 0 4em 0.7em;
 }
+
 .carte-restaurant h1 {
   font-size: 4em;
   margin-left: 0.5em;
 }
+
 .carte-restaurant .fa-heart {
   margin-left: 20%;
 }
+
 .carte-restaurant h2 {
   font-size: 3em;
   border-bottom: 3px solid #99E2D0;
   width: 10%;
   margin-top: 2em;
 }
+
 .plat {
   width: 95%;
   background-color: white;
   border-radius: 35px;
-  box-shadow: 0 0 20px #0000002e;
+  -webkit-box-shadow: 0 0 20px #0000002e;
+          box-shadow: 0 0 20px #0000002e;
   padding-left: 2em;
   padding-bottom: 1em;
 }
+
 .plat h3 {
   font-size: 2em;
   padding-top: 0.5em;
 }
+
 .plat h4 {
   margin-top: -1em;
   font-size: 0.9em;
 }
+
 .tarif {
   font-size: 3em;
   position: absolute;
   right: 1em;
 }
+
+.pied-de-page {
+  background-color: #353535;
+  padding-bottom: 7em;
+}
+
+.pied-de-page h3 {
+  color: white;
+  margin-left: 3em;
+  padding-top: 2em;
+  font-size: 2em;
+  font-weight: normal;
+}
+
+.pied-de-page a {
+  color: white;
+}
+
+.pied-de-page li {
+  margin-left: 3em;
+  margin-bottom: 1em;
+}
+
+.pied-de-page i {
+  color: white;
+  padding-right: 3em;
+}
+/*# sourceMappingURL=style.css.map */
