--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,10 +1,10 @@
 .pied-de-page {
-  background-color: green;
+  background-color: #353535;
   padding-bottom: 7em;
 }
 
 .pied-de-page h3 {
-  color: #fff;
+  color: white;
   margin-left: 3em;
   padding-top: 2em;
   font-size: 2em;
@@ -12,7 +12,7 @@
 }
 
 .pied-de-page a {
-  color: #fff;
+  color: white;
 }
 
 .pied-de-page li {
@@ -21,7 +21,6 @@
 }
 
 .pied-de-page i {
-  color: #fff;
+  color: white;
   padding-right: 3em;
 }
-/*# sourceMappingURL=footer.css.map */
