--- a/sass/_restaurant.scss
+++ b/sass/_restaurant.scss
@@ -1,5 +1,5 @@
 #restaurants {
-  background-color: #f2f2f2;
+  background-color: grey;
   margin-top: 8em;
   padding-bottom: 7em;
 }
@@ -55,4 +55,11 @@
   font-size: 4em;
   left: 85%;
   bottom: 6%;
+  &:hover {
+    transition: all 0.2s linear 0.2s;
+    opacity: 1;
+    background: linear-gradient(to bottom, #FF79da, #9356dc);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 }
