--- a/sass/_head.scss
+++ b/sass/_head.scss
@@ -1,8 +1,29 @@
+header .logo {
+  margin-left: 20%;
+  width: 40em;
+}
+
+.fa-arrow-left {
+  position: absolute;
+  left: 1px;
+  top: 1em;
+  font-size: 3em;
+  margin-left: 1em;
+  color: black;
+}
+
+.contenaire-en-tete .logo {
+  margin-left: 20%;
+  margin-top: 2em;
+  width: 50%;
+  padding-bottom: 2em;
+}
+
 .formulaire {
   width: 100%;
   height: 7em;
-  background-color: #EAEAEA;
-  border: 1px solid #EAEAEA;
+  background-color: #eaeaea;
+  border: 1px solid #eaeaea;
   border-top: 2px solid grey;
 }
 
@@ -13,27 +34,6 @@
   font-size: 1.5em;
 }
 
-::-webkit-input-placeholder {
-  text-align: center;
-  font-size: 3em;
-  padding-top: 1em;
-  font-weight: bold;
-}
-
-:-ms-input-placeholder {
-  text-align: center;
-  font-size: 3em;
-  padding-top: 1em;
-  font-weight: bold;
-}
-
-::-ms-input-placeholder {
-  text-align: center;
-  font-size: 3em;
-  padding-top: 1em;
-  font-weight: bold;
-}
-
 ::placeholder {
   text-align: center;
   font-size: 3em;
@@ -42,7 +42,7 @@
 }
 
 section {
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
   padding-bottom: 2em;
 }
 
@@ -56,18 +56,34 @@ section {
   text-align: center;
 }
 
+.bouton {
+  border-radius: 85px;
+  margin: 5em 10em;
+  padding: 2em;
+  background: linear-gradient(#FF79da, #9356dc);
+  text-align: center;
+  &:hover {
+      opacity: 0.9;
+      box-shadow: 0 0 20px #FF79da;
+    }
+}
+
+.bouton a {
+  color: white;
+  font-weight: bold;
+}
+
 article h2 {
   margin-left: 2em;
   margin-top: 4em;
 }
 
 .fonctionnement li {
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
   margin: 1em 3em 0em 3em;
   border-radius: 30px;
   padding: 3.5em 0;
-  -webkit-box-shadow: 0 0 20px #0000002E;
-          box-shadow: 0 0 20px #0000002E;
+  box-shadow: 0 0 20px #00000002;
   font-weight: bold;
   font-size: 0.9em;
 }
@@ -90,6 +106,5 @@ article h2 {
   padding: 1.5em;
   font-size: 13px;
   border-radius: 50%;
-  background-color: #9356DC;
+  background-color: #9356dc;
 }
-/*# sourceMappingURL=accueil.css.map */
