--- a/sass/_head.scss
+++ b/sass/_head.scss
@@ -19,6 +19,11 @@ header .logo {
   padding-bottom: 2em;
 }
 
+section {     /*partie reservation*/
+  background-color: #f6f6f6;
+  padding-bottom: 2em;
+}
+
 .formulaire {
   width: 100%;
   height: 7em;
@@ -29,21 +34,20 @@ header .logo {
 
 .fa-map-marker-alt {
   position: absolute;
+  align-items: center;
   top: 6em;
-  left: 30%;
   font-size: 1.5em;
+  @media (min-width: 64em) {
+    font-size: 3em;
+    top: 3em;
+  }
 }
 
 ::placeholder {
-  text-align: center;
+  padding-left: 1.5em;
   font-size: 3em;
   padding-top: 1em;
   font-weight: bold;
-}
-
-section {
-  background-color: #f6f6f6;
-  padding-bottom: 2em;
 }
 
 .explorer h1 {
@@ -54,6 +58,9 @@ section {
 
 .explorer p {
   text-align: center;
+  @media (min-width: 64em) {
+    font-size: 2em;
+  }
 }
 
 .bouton {
@@ -79,7 +86,7 @@ article h2 {
 }
 
 .fonctionnement li {
-  background-color: #f6f6f6;
+  background-color: #eaeaea;
   margin: 1em 3em 0em 3em;
   border-radius: 30px;
   padding: 3.5em 0;
