--- a/sass/style.css
+++ b/sass/style.css
@@ -62,6 +62,12 @@ header .logo {
   padding-bottom: 2em;
 }
 
+section {
+  /*partie reservation*/
+  background-color: #f6f6f6;
+  padding-bottom: 2em;
+}
+
 .formulaire {
   width: 100%;
   height: 7em;
@@ -72,42 +78,46 @@ header .logo {
 
 .fa-map-marker-alt {
   position: absolute;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   top: 6em;
-  left: 30%;
   font-size: 1.5em;
 }
 
+@media (min-width: 64em) {
+  .fa-map-marker-alt {
+    font-size: 3em;
+    top: 3em;
+  }
+}
+
 ::-webkit-input-placeholder {
-  text-align: center;
+  padding-left: 1.5em;
   font-size: 3em;
   padding-top: 1em;
   font-weight: bold;
 }
 
 :-ms-input-placeholder {
-  text-align: center;
+  padding-left: 1.5em;
   font-size: 3em;
   padding-top: 1em;
   font-weight: bold;
 }
 
 ::-ms-input-placeholder {
-  text-align: center;
+  padding-left: 1.5em;
   font-size: 3em;
   padding-top: 1em;
   font-weight: bold;
 }
 
 ::placeholder {
-  text-align: center;
+  padding-left: 1.5em;
   font-size: 3em;
   padding-top: 1em;
   font-weight: bold;
-}
-
-section {
-  background-color: #f6f6f6;
-  padding-bottom: 2em;
 }
 
 .explorer h1 {
@@ -118,6 +128,12 @@ section {
 
 .explorer p {
   text-align: center;
+}
+
+@media (min-width: 64em) {
+  .explorer p {
+    font-size: 2em;
+  }
 }
 
 .bouton {
@@ -146,7 +162,7 @@ article h2 {
 }
 
 .fonctionnement li {
-  background-color: #f6f6f6;
+  background-color: #eaeaea;
   margin: 1em 3em 0em 3em;
   border-radius: 30px;
   padding: 3.5em 0;
@@ -183,6 +199,15 @@ section img {
   z-index: 0;
 }
 
+@media (min-width: 64em) {
+  section img {
+    width: 60%;
+    height: auto;
+    margin-left: 20%;
+    position: none;
+  }
+}
+
 .carte-restaurant {
   position: relative;
   z-index: 1;
@@ -199,8 +224,29 @@ section img {
   margin-left: 0.5em;
 }
 
-.carte-restaurant .fa-heart {
-  margin-left: 20%;
+.icone-menu-vide {
+  position: absolute;
+  margin-left: 15%;
+}
+
+.icone-menu-vide:hover {
+  opacity: 0;
+}
+
+.icone-menu-plein {
+  position: absolute;
+  margin-left: 15%;
+  opacity: 0;
+}
+
+.icone-menu-plein:hover {
+  -webkit-transition: all 0.2s linear 0.2s;
+  transition: all 0.2s linear 0.2s;
+  opacity: 1;
+  background: -webkit-gradient(linear, left top, left bottom, from(#FF79da), to(#9356dc));
+  background: linear-gradient(to bottom, #FF79da, #9356dc);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .carte-restaurant h2 {
@@ -237,9 +283,15 @@ section img {
 }
 
 #restaurants {
-  background-color: grey;
+  background-color: #eaeaea;
   margin-top: 8em;
   padding-bottom: 7em;
+}
+
+@media (min-width: 64em) {
+  #restaurants {
+    margin-top: 4em;
+  }
 }
 
 #restaurants h2 {
@@ -248,22 +300,37 @@ section img {
   margin-bottom: 3em;
 }
 
-.restaurants img {
+.vignette-restaurant img {
   width: 100%;
-  height: 30em;
+  height: 22em;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 30px 30px 0 0;
 }
 
+@media (min-width: 64em) {
+  .vignette-restaurant img {
+    height: 10em;
+  }
+}
+
 .vignette-restaurant {
   width: 90%;
   margin-left: 3em;
+  margin-bottom: 3em;
   position: relative;
   background-color: white;
   border-radius: 30px;
   -webkit-box-shadow: 0 0 20px #0000002e;
           box-shadow: 0 0 20px #0000002e;
+}
+
+@media (min-width: 64em) {
+  .vignette-restaurant {
+    display: inline-block;
+    width: 20%;
+    height: 15em;
+  }
 }
 
 .nouveaute p {
@@ -275,14 +342,20 @@ section img {
   margin-left: 65%;
 }
 
+@media (min-width: 64em) {
+  .nouveaute p {
+    font-size: 1em;
+  }
+}
+
 .vignette-restaurant h3 {
   margin-top: 0.5em;
-  margin-left: 2em;
+  margin-left: 1.5em;
   color: black;
 }
 
 .vignette-restaurant h4 {
-  margin-left: 2em;
+  margin-left: 1.5em;
   margin-top: -1em;
   padding-bottom: 2em;
   color: black;
@@ -290,11 +363,21 @@ section img {
 }
 
 .icone-vide {
-  position: absolute;
   font-size: 4em;
+  position: absolute;
   left: 85%;
-  bottom: 6%;
+  bottom: 10%;
   color: black;
+}
+
+@media (min-width: 64em) {
+  .icone-vide {
+    font-size: 2em;
+  }
+}
+
+.icone-vide:hover {
+  opacity: 0;
 }
 
 .icone-plein {
@@ -302,7 +385,13 @@ section img {
   position: absolute;
   font-size: 4em;
   left: 85%;
-  bottom: 6%;
+  bottom: 10%;
+}
+
+@media (min-width: 64em) {
+  .icone-plein {
+    font-size: 2em;
+  }
 }
 
 .icone-plein:hover {
